# cdh-ansible

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  SERVER-VERSIONS.md  ansible.cfg  ansible.yaml  cdh-web.yml  cdh-web_qa.yml  cdh-web_staging.yml  deploy  derrida.yml  derrida_qa.yml  derrida_staging.yml  devbox.json  geniza_qa.yml  hosts  mep.yml  mep_qa.yml  mep_staging.yml  pemm_qa.yml  ppa.yml  ppa_qa.yml  ppa_staging.yml  pyproject.toml  requirements.txt  requirements.yml  revert_deploy.yml  test_cleanup.yml  winthrop.yml  winthrop_qa.yml  winthrop_staging.yml
adr/: 0001-use-adr.md
architecture-decisions/: 0002-staging-environment.md  0003-inventory-directory.md  0004-github-deploy-token.md  0005-vault-variables-instead-of-files.md
collections/: requirements.yml
docs/: README.md  Release & Deployment Guide.md  deployment-guide.md  release-and-deployment-guide.md
filter_plugins/: project_name.py
group_vars/: README.md  winthrop_qa.yml
hooks/: pre-commit
inventory/: all_hosts
playbooks/: cdh-web.yml  cdh-web_qa.yml  cdh-web_staging.yml  cdhweb.yml  cdhweb_qa.yml  db_setup.yml  derrida.yml  derrida_archive.yml  derrida_archive_qa.yml  derrida_crawl.yml  derrida_crawl_qa.yml  escriptorium.yml  geniza.yml  geniza_qa.yml  geniza_qa_i18n.yml  geotaste.yml  mep.yml  mep_qa.yml  mep_staging.yml  pemm.yml  pemm_qa.yml  ppa_qa.yml  ppa_staging.yml  prodigy.yml  prosody.yml  prosody_qa.yml  replicate.yml  revert_deploy.yml  shxco.yml  shxco_datasets.yml  shxco_qa.yml  simulatingrisk.yml  simulatingrisk_dev.yml  winthrop_qa.yml
(+503 files in other folders)
