[project]
name = ""
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "ansible>=6.7",
    "ansible-lint",
    "passlib",
    "yamllint",
    "pre-commit",
    "psycopg2",
    "molecule>=25.7.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
