[project]
name = ""
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11,<12",
    "ansible-lint",
    "passlib",
    "yamllint",
    "pre-commit",
    "psycopg2",
    "molecule>=25.7.0",
    "docker>=7.1.0",
    "ansible-dev-tools>=25.8.3",
    "molecule-plugins[docker]>=25.8.12",
    "podman>=5.6.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
