[project]
name = "cdh-ansible"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "ansible==12.2.0",
    "ansible-core==2.19.4",
    "ansible-builder==3.0.1",
    "ansible-compat>=25.1.0",
    "ansible-lint>=25.1.0",
    "molecule==6.0.3",
    "molecule-plugins[docker]==23.5.0",
    "passlib",
    "yamllint",
    "pre-commit",
    "psycopg2-binary",
    "pyyaml",
    "wheel",
]

[tool.uv]
package = false
